log/build_2023-10-31_00-32-17/castelet/stderr.log
  File "/home/keny/MANOS_ws/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 110
    if "/MANOS/" not in topic and "/rosout" not in topic:
                                                        ^
SyntaxError: invalid syntax

